--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/blog.css">
     <title>My Simple Website</title>
 </head>
 <body>
-    
+    <div>
+         <h3>My First Website</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorum quo reiciendis, laborum quisquam minima eveniet excepturi earum assumenda expedita corrupti voluptatibus suscipit hic est ipsum neque quis laboriosam enim.</p>
+    </div>
 </body>
 </html>
