--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-         <h3>My First Website</h3>
+         <h3>My First Blog</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorum quo reiciendis, laborum quisquam minima eveniet excepturi earum assumenda expedita corrupti voluptatibus suscipit hic est ipsum neque quis laboriosam enim.</p>
+    </div>
+    <div>
+         <h3>My Second Blog</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorum quo reiciendis, laborum quisquam minima eveniet excepturi earum assumenda expedita corrupti voluptatibus suscipit hic est ipsum neque quis laboriosam enim.</p>
+    </div>
+    <div>
+         <h3>My Third Blog</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorum quo reiciendis, laborum quisquam minima eveniet excepturi earum assumenda expedita corrupti voluptatibus suscipit hic est ipsum neque quis laboriosam enim.</p>
     </div>
 </body>
