--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
          <h3>My Third Blog</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorum quo reiciendis, laborum quisquam minima eveniet excepturi earum assumenda expedita corrupti voluptatibus suscipit hic est ipsum neque quis laboriosam enim.</p>
     </div>
+    <div>
+        <h3>How to push incremental</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
