--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h1>The First Image</h1>
+        <img src="images/images (1).jpg" alt="colourful background image">
+    </div>
 </body>
 </html>
